GMS-35 Contructor injection introduced in the recently modified files